--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="manifest" href="manifest.json" />
+<link rel="apple-touch-icon" href="icon192.png" />
+<meta name="theme-color" content="#111111" />
     <meta charset="UTF-8" />
     <meta
       name="viewport"
