--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="manifest" href="manifest.json" />
-<link rel="apple-touch-icon" href="icon192.png" />
+<link rel="apple-touch-icon" href="sora_icon_192.png" />
 <meta name="theme-color" content="#111111" />
     <meta charset="UTF-8" />
     <meta
