--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <link rel="manifest" href="manifest.json" />
-<link rel="apple-touch-icon" href="sora_icon_192.png" />
-<meta name="theme-color" content="#111111" />
+    <link rel="apple-touch-icon" href="sora_icon_192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="sora_icon_512.png" />
+    <meta name="theme-color" content="#111111" />
     <meta charset="UTF-8" />
     <meta
       name="viewport"
