--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#111111" />
     <meta charset="UTF-8" />
     <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1,maximum-scale=1,viewport-fit=cover"
-    />
+  name="viewport"
+  content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
+/>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <title>Sora Prompt Builder — EN/JP</title>
