--- a/404.html
+++ b/404.html
@@ -1,8 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=./index.html" />
+    <meta charset="utf-8" />
+    <meta http-equiv="refresh" content="0; url=/sora-prompt-builder/" />
+    <script>
+      // JSでも保険
+      location.replace("/sora-prompt-builder/");
+    </script>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
