--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
 />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <title>Sora Prompt Builder — EN/JP</title>
     <!-- Tailwind (CDN) -->
     <script src="https://cdn.tailwindcss.com"></script>
